infra/k8s/podman/local/patches/ingresses/cribstop-web.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cribstop-web
spec:
  ingressClassName: nginx
  rules:
    - host: cribstop.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cribstop-web-svc
                port:
                  number: 3000
