infra/k8s/podman/local/patches/ingresses/jaeger.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-svc
                port:
                  number: 16686
